# Stratego

./: DEPLOYMENT.md  Dockerfile  QUICK_DEPLOY.md  README.md  README_SOLUTION.md  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
stratego/models/: ollama_model.py
stratego/web/: __init__.py  app.py  game_controller.py
stratego/web/components/: __init__.py  board_display.py  game_history.py  interactive_board.py  move_input.py  status_panel.py
stratego/web/config/: __init__.py  agent_builder.py  game_config.py  session_manager.py
stratego/web/utils/: __init__.py  validators.py
