[project]
name = "stratego"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "textarena",
  "langchain-ollama",
  "langchain-core",
  "pydantic>=2"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["log", "log.*"]

[project.optional-dependencies]
hf = ["transformers>=4.44", "accelerate", "torch", "hf_xet"]
web = ["streamlit>=1.28.0", "streamlit-chat>=0.0.2.1", "pandas>=1.5", "plotly>=5.0"]

[project.scripts]
stratego = "stratego.main:cli"
stratego-install-env = "stratego.installer:main"
benchmark = "stratego.benchmarking.main_benchmark:main"
